[tool.poetry]
name = "world-timer"
version = "0.1.0"
description = "Project based on the book Python for DevOps, by A. Deza & N. Gift"
authors = ["E. Panzarasa <ezequiel.panzarasa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
click = "^8.1.3"
requests = "^2.31.0"
fire = "^0.5.0"
molotov = "^2.6"
setuptools = "^68.0.0"
twine = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
